@@ -287,6 +287,18 @@ _parts_cursors_apply(Elm_Layout_Smart_Data *sd)
 }
 
 static void
+_reload_theme(void *data, Evas_Object *obj,
+              const char *emission __UNUSED__, const char *source __UNUSED__)
+{
+   Evas_Object *layout = data;
+   const char *file;
+   const char *group;
+
+   edje_object_file_get(obj, &file, &group);
+   elm_layout_file_set(layout, file, group);
+}
+
+static void
 _visuals_refresh(Evas_Object *obj,
                  Elm_Layout_Smart_Data *sd)
 {
@@ -295,6 +307,13 @@ _visuals_refresh(Evas_Object *obj,
    _parts_cursors_apply(sd);
 
    ELM_LAYOUT_CLASS(ELM_WIDGET_DATA(sd)->api)->sizing_eval(obj);
+
+   edje_object_signal_callback_del(ELM_WIDGET_DATA(sd)->resize_obj,
+				   "edje,change,file", "edje",
+                                   _reload_theme);
+   edje_object_signal_callback_add(ELM_WIDGET_DATA(sd)->resize_obj,
+				   "edje,change,file", "edje",
+                                   _reload_theme, obj);
 }
 
 static Eina_Bool
